kubernetes/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatgpt-web
  labels:
    app: chatgpt-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatgpt-web
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: chatgpt-web
    spec:
      containers:
        - image: chenzhaoyu94/chatgpt-web
          name: chatgpt-web
          imagePullPolicy: Always
          ports:
            - containerPort: 9426
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 300m
              memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chatgpt-web
  name: chatgpt-web
spec:
  ports:
    - name: chatgpt-web
      port: 9426
      protocol: TCP
      targetPort: 9426
  selector:
    app: chatgpt-web
  type: ClusterIP
